1. Fixed #211 (https://github.com/SIMRacingApps/SIMRacingApps/issues/211)        Added a blue dot to the Trackmap to indicate where the merge point is for the REFERENCE car.        Implemented new API calls for version 1.12        - Car/(CARIDENTIFIER)/MergePointLatitude        - Car/(CARIDENTIFIER)/MergePointLongitude        NOTE: I will be evaluating the location of all the merge points to match the blue cone in iRacing.              For now, they may be wrong or even non existent.

--- a/widgets/TrackMap/TrackMap.css
+++ b/widgets/TrackMap/TrackMap.css
@@ -178,6 +178,14 @@
     font-size: 9%;
 }
 
+.SIMRacingApps-Widget-TrackMap-MergePointContainer {
+    position:  absolute;
+    opacity:   1;
+    width:     3%;
+    height:    5%;
+    font-size: 4.5%;
+}
+
 .SIMRacingApps-Widget-TrackMap-MarkerContainer {
     position:  absolute;
 }
